# PyMesh

./: .gitignore  CMakeLists.txt  README.md
build-scripts/: build-linux.sh  build.ps1
python/: PyPredicates.cpp  requirements.txt
python/pymesh/: __init__.py
python/pymesh/misc/: quaternion.py
src/Misc/: HashGridImplementation.inl  HashMapTrait.h  TriBox2D.h  tribox3.h
tests/tools/ConvexHull/: unit_test_driver.cpp
tests/tools/Predicates/: predicates_test.h
tools/Boolean/Clipper/: ClipperEngine.cpp
tools/CGAL/: SnapRounding2.cpp
tools/MeshUtils/: DegeneratedTriangleRemoval.cpp  FaceUtils.cpp  MeshUtils.cpp  TriangleMetric.cpp  TriangleMetric.h  VoxelUtils.cpp
tools/Predicates/: predicates.c  predicates.h
